--- a/ArquivosNecessariosJava/app/src/main/res/values/colors.xml
+++ b/ArquivosNecessariosJava/app/src/main/res/values/colors.xml
@@ -2,14 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main_background_gray">#898989</color>
-    <color name="score_green">#3CB371</color>
-    <color name="button_minus_red">#FF0000</color>
-    <color name="truco_button_purple">#8800CC</color>
-    <color name="end_game_background_dark_gray">#333333</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="main_background_brown">#332B2B</color>
+    <color name="score_green">#FFFFFFFF</color>
+    <color name="button_minus_red">#F41800</color>
+    <color name="button_plus_brown">#A04035</color>
+    <color name="end_game_background_brown">#332B2B</color>
+    <color name="button_truquin">#7A433D</color>
 </resources>
