--- a/ArquivosNecessariosJava/app/src/main/res/values/themes.xml
+++ b/ArquivosNecessariosJava/app/src/main/res/values/themes.xml
@@ -1,10 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.AppTruco" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/button_truquin</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
@@ -15,5 +12,6 @@
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/botao_arrendodado</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:paddingHorizontal">80dp</item> <item name="android:paddingVertical">20dp</item> <item name="android:layout_marginVertical">4dp</item> </style>
+        <item name="android:paddingHorizontal">80dp</item> <item name="android:paddingVertical">20dp</item> <item name="android:layout_marginVertical">4dp</item>
+    </style>
 </resources>
